tests/fixtures/invalid/pow_float_none_str.py
# Cannot call pow() with Float, None, Str
x = pow(1.0, None, "hello")
